<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="352dp"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/Widget.Example.Toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"
                app:navigationIcon="@mipmap/ic_clock"
                app:title="@string/app_name" />


        </com.google.android.material.appbar.AppBarLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nombreNadador"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:inputType="textCapSentences"
            android:text="@string/nombre_default"
            android:textColor="@color/textColor"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.556"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edadNadador"
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:text="@string/edad_default"
            app:layout_constraintStart_toStartOf="@+id/nombreNadador"
            app:layout_constraintTop_toBottomOf="@+id/nombreNadador">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nacionalidad"
            android:layout_width="110dp"
            android:layout_height="44dp"
            android:layout_marginTop="16dp"
            android:singleLine="true"
            android:text="@string/nacionalidad_default"
            app:layout_constraintEnd_toEndOf="@+id/edadNadador"
            app:layout_constraintStart_toStartOf="@+id/edadNadador"
            app:layout_constraintTop_toBottomOf="@+id/edadNadador">

        </com.google.android.material.textfield.TextInputEditText>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancelar_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cancelar"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/leguaje"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nacionalidad" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/modificar_button"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/editar"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/leguaje" />

        <RadioGroup
            android:id="@+id/leguaje"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:checkedButton="@+id/first"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="@+id/nacionalidad"
            app:layout_constraintEnd_toEndOf="@+id/nombreNadador"
            app:layout_constraintTop_toTopOf="@+id/edadNadador">

            <RadioButton
                android:id="@+id/first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/english" />

            <RadioButton
                android:id="@+id/second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/spanish" />
        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>