<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorSecondary"
    android:textAlignment="gravity"
    android:transitionName="fab_transition"
    tools:context=".view.TransitionAddActivity">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Widget.Example.Toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:navigationIcon="@mipmap/ic_clock"
            app:title="@string/app_name" />

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/nombre"
        android:layout_width="179dp"
        android:layout_height="65dp"
        android:layout_marginTop="64dp"
        android:inputType="textCapSentences"
        android:textColor="@color/textColor"
        android:textSize="@dimen/text_size"
        app:endIconMode="clear_text"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent">

    </com.google.android.material.textfield.TextInputEditText>

    <Button
        android:id="@+id/fecha"
        android:layout_width="91dp"
        android:layout_height="0dp"
        android:text="@string/fecha"
        app:layout_constraintBottom_toBottomOf="@+id/nombre"
        app:layout_constraintEnd_toEndOf="@+id/metros"
        app:layout_constraintStart_toStartOf="@+id/metros"
        app:layout_constraintTop_toTopOf="@+id/nombre" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/kilometros"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:hint="@string/Kilometros"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
        app:layout_constraintStart_toStartOf="@id/nombre"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/metros"
        android:layout_width="110dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/metros"
        android:singleLine="true"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/minutos"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:hint="@string/minutos"
        android:singleLine="true"
        app:layout_constraintBottom_toBottomOf="@+id/horas"
        app:layout_constraintEnd_toStartOf="@+id/metros"
        app:layout_constraintStart_toEndOf="@+id/kilometros"
        app:layout_constraintTop_toTopOf="@+id/horas">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/segundos"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/segundos"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/metros">

    </com.google.android.material.textfield.TextInputEditText>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/horas"
        android:layout_width="84dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:hint="@string/horas"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/kilometros">

    </com.google.android.material.textfield.TextInputEditText>

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:checkedButton="@+id/first"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/nombre">

        <RadioButton
            android:id="@+id/primero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/piscina_grande"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            tools:layout_editor_absoluteY="175dp" />

        <RadioButton
            android:id="@+id/segundo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/piscina_mediana"
            android:textAlignment="gravity"
            app:layout_constraintBottom_toTopOf="@+id/tercero"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/primero" />

        <RadioButton
            android:id="@+id/tercero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/aguas_abiertas"
            android:textAlignment="gravity"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            tools:layout_editor_absoluteY="275dp" />
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancel_button"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="100dp"
        android:layout_height="65dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/cancelar"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.183"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/add_button"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="100dp"
        android:layout_height="65dp"

        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/add_button"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/cancel_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="50dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="54dp" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="481dp" />


</androidx.constraintlayout.widget.ConstraintLayout>

