<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    android:layout_marginBottom="10dp"
    android:clickable="false"
    android:focusableInTouchMode="true"
    app:cardElevation="3dp"
    app:cardMaxElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="210dp">


        <!-- Title, secondary and supporting text -->


        <TextView
            android:id="@+id/cardFecha"
            android:layout_width="90dp"
            android:layout_height="38dp"
            android:layout_marginStart="13dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fecha"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="@+id/cardNombre"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/cardNombre" />

        <TextView
            android:id="@+id/cardDuracion"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="16dp"
            android:text="@string/duracion"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/cardTipo"
            app:layout_constraintEnd_toEndOf="@+id/cardFecha" />

        <TextView
            android:id="@+id/cardNombre"
            android:layout_width="261dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:text="@string/nombre"
            android:textAppearance="?attr/textAppearanceHeadline6"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/cardDistancia"
            android:layout_width="150dp"
            android:layout_height="50dp"

            android:text="@string/Kilometros"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintStart_toStartOf="@+id/cardNombre"
            app:layout_constraintTop_toTopOf="@+id/cardDuracion" />

        <TextView
            android:id="@+id/cardTipo"
            android:layout_width="150dp"
            android:layout_height="30dp"

            android:layout_marginBottom="24dp"
            android:text="@string/tipo"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/cardDuracion"
            app:layout_constraintHorizontal_bias="0.528"
            app:layout_constraintStart_toStartOf="@+id/cardDistancia" />

        <!-- Buttons -->


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>